@@ -1455,10 +1455,15 @@
     <string name="key_equalsInsteadOfPlus">Use Equals-Key</string>
     <string name="key_equalsInsteadOfPlus_tt">Use the equal key instead of the plus key.
         This is always useful if the plus character is not a primary key, but the second assignment of the
-        equals character, e.g. for an American or French keyboard layout.</string>
+        equals character, e.g. for an American or French keyboard layout.
+    </string>
 
     <string name="key_snapToGrid">Snap To Grid</string>
     <string name="key_snapToGrid_tt">If set, the component is aligned with the grid.</string>
+
+    <string name="key_layoutShapeDelta">Pin Separator</string>
+    <string name="key_layoutShapeDelta_tt">Used by the layout shape type. Sets the distance to the previous pin.
+    </string>
 
     <string name="mod_insertWire">Inserted wire.</string>
     <string name="mod_insertCopied">Insert from clipboard.</string>
